--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>ID3 Tag Editorr</title>
+    <meta
+        http-equiv="Content-Security-Policy"
+        content="default-src 'self'; style-src 'nonce-id3'"
+    />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ID3 Tag Editor</title>
 </head>
 <body>
     <div id="root"></div>
