--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>ID3 Tag Editorr</title>
+    <title>Counter</title>
     <meta
         http-equiv="Content-Security-Policy"
         content="default-src 'self'; style-src 'nonce-id3'"
